web/book/tests/documentation/snapshots/documentation__book__reference__syntax__date-time__index__date-and-time__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.duckdb\n\nfrom invoices\nselect {\n  invoice_date | date.to_text \"%d/%m/%Y\"\n}\n"
---
SELECT
  strftime(invoice_date, '%d/%m/%Y')
FROM
  invoices

