web/book/tests/documentation/snapshots/documentation__book__reference__syntax__date-time__index__date-and-time__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.postgres\n\nfrom invoices\nselect {\n  invoice_date | date.to_string \"%d/%m/%Y\"\n}\n"
---
SELECT
  TO_CHAR(invoice_date, 'DD/MM/YYYY')
FROM
  invoices

