web/book/tests/documentation/snapshots/documentation__book__reference__syntax__date-time__index__date-and-time__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.mysql\n\nfrom invoices\nselect {\n  invoice_date | date.to_string \"%d/%m/%Y\"\n}\n"
---
SELECT
  DATE_FORMAT(invoice_date, '%d/%m/%Y')
FROM
  invoices

